correct types assigment and footer bottom on small height pages

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,4 @@
-.footer {
+:host {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -8,6 +8,8 @@
     padding-bottom: 10px;
     position: relative;
     z-index: 18;
+
+    margin-top: auto;
 
     .extern-links--last {
         display: flex;
